Swager done
