# pkg/handlers/admin/DeleteProduct.go
@@ -9,6 +9,26 @@ import (
 	"store.github.io/pkg/models"
 )
 
+type DeleteError struct {
+	Error string `json:"error"`
+}
+
+type DeleteResponse struct {
+	Message string `json:"message"`
+}
+
+// DeleteProduct удаление товара по ID
+// @Summary Удаление товара
+// @Description Удалить товар из базы данных по ID
+// @Tags admin
+// @Security BearerAuth
+// @Accept json
+// @Produce json
+// @Param id path int true "ID товара"
+// @Success 200 {object} DeleteError "Товар успешно удален"
+// @Failure 404 {object} DeleteError "Товар не найден"
+// @Failure 500 {object} DeleteError "Не удалось удалить товар"
+// @Router /admin/products/{id} [delete]
 func DeleteProduct(c *gin.Context) {
 	// Получаем ID продукта из URL параметров
 	id := c.Param("id")
